[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/sprites/Sky-layer.png" type="Texture" id=1]
[ext_resource path="res://menu/ui/kenneyUI-blue.tres" type="Theme" id=2]
[ext_resource path="res://menu/LevelMenu.gd" type="Script" id=3]

[node name="LevelMenu" type="MarginContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 265, 144 )
rotation = 1.5708
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 544.0
margin_bottom = 288.0
theme = ExtResource( 2 )

[node name="MenuTitle" type="Label" parent="VBoxContainer"]
margin_right = 544.0
margin_bottom = 23.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
text = "Level menu"
align = 1

[node name="EscapeLabel" type="Label" parent="VBoxContainer"]
margin_top = 27.0
margin_right = 544.0
margin_bottom = 50.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
text = "Escape Levels"

[node name="EscapeLvls" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 544.0
margin_bottom = 101.0

[node name="Esc1" type="Button" parent="VBoxContainer/EscapeLvls"]
unique_name_in_owner = true
margin_right = 31.3241
margin_bottom = 47.251
text = "1"

[node name="Esc2" type="Button" parent="VBoxContainer/EscapeLvls"]
unique_name_in_owner = true
margin_left = 35.0
margin_right = 73.3241
margin_bottom = 47.251
text = "2"

[node name="Esc3" type="Button" parent="VBoxContainer/EscapeLvls"]
unique_name_in_owner = true
margin_left = 77.0
margin_right = 115.324
margin_bottom = 47.251
text = "3"

[node name="Esc4" type="Button" parent="VBoxContainer/EscapeLvls"]
unique_name_in_owner = true
margin_left = 119.0
margin_right = 157.324
margin_bottom = 47.251
text = "4"

[node name="Esc5" type="Button" parent="VBoxContainer/EscapeLvls"]
unique_name_in_owner = true
margin_left = 161.0
margin_right = 199.324
margin_bottom = 47.251
text = "5"

[node name="AscendLabel" type="Label" parent="VBoxContainer"]
margin_top = 105.0
margin_right = 544.0
margin_bottom = 128.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
text = "Ascend Levels"
align = 2

[node name="AscendLvls" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 544.0
margin_bottom = 179.0
alignment = 2

[node name="Asc1" type="Button" parent="VBoxContainer/AscendLvls"]
unique_name_in_owner = true
margin_left = 219.0
margin_right = 250.324
margin_bottom = 47.251
text = "1"

[node name="Asc2" type="Button" parent="VBoxContainer/AscendLvls"]
unique_name_in_owner = true
margin_left = 254.0
margin_right = 292.324
margin_bottom = 47.251
text = "2"

[node name="Asc3" type="Button" parent="VBoxContainer/AscendLvls"]
unique_name_in_owner = true
margin_left = 296.0
margin_right = 334.324
margin_bottom = 47.251
text = "3"

[node name="Asc4" type="Button" parent="VBoxContainer/AscendLvls"]
unique_name_in_owner = true
margin_left = 338.0
margin_right = 376.324
margin_bottom = 47.251
text = "4"

[node name="Asc5" type="Button" parent="VBoxContainer/AscendLvls"]
unique_name_in_owner = true
margin_left = 380.0
margin_right = 418.324
margin_bottom = 47.251
text = "5"

[node name="Asc6" type="Button" parent="VBoxContainer/AscendLvls"]
unique_name_in_owner = true
margin_left = 422.0
margin_right = 460.324
margin_bottom = 47.251
text = "6"

[node name="Asc7" type="Button" parent="VBoxContainer/AscendLvls"]
unique_name_in_owner = true
margin_left = 464.0
margin_right = 502.324
margin_bottom = 47.251
text = "7"

[node name="Asc8" type="Button" parent="VBoxContainer/AscendLvls"]
unique_name_in_owner = true
margin_left = 506.0
margin_right = 544.324
margin_bottom = 47.251
text = "8"

[node name="BossLabel" type="Label" parent="VBoxContainer"]
margin_top = 183.0
margin_right = 544.0
margin_bottom = 206.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
text = "Boss Levels"

[node name="BossLvls" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 210.0
margin_right = 544.0
margin_bottom = 257.0

[node name="Boss0" type="Button" parent="VBoxContainer/BossLvls"]
unique_name_in_owner = true
margin_right = 38.3241
margin_bottom = 47.251
text = "0"

[node name="Boss1" type="Button" parent="VBoxContainer/BossLvls"]
unique_name_in_owner = true
margin_left = 42.0
margin_right = 73.3241
margin_bottom = 47.251
text = "1"

[connection signal="pressed" from="VBoxContainer/EscapeLvls/Esc1" to="." method="_on_Esc1_pressed"]
[connection signal="pressed" from="VBoxContainer/EscapeLvls/Esc2" to="." method="_on_Esc2_pressed"]
[connection signal="pressed" from="VBoxContainer/EscapeLvls/Esc3" to="." method="_on_Esc3_pressed"]
[connection signal="pressed" from="VBoxContainer/EscapeLvls/Esc4" to="." method="_on_Esc4_pressed"]
[connection signal="pressed" from="VBoxContainer/EscapeLvls/Esc5" to="." method="_on_Esc5_pressed"]
[connection signal="pressed" from="VBoxContainer/AscendLvls/Asc1" to="." method="_on_Asc1_pressed"]
[connection signal="pressed" from="VBoxContainer/AscendLvls/Asc2" to="." method="_on_Asc2_pressed"]
[connection signal="pressed" from="VBoxContainer/AscendLvls/Asc3" to="." method="_on_Asc3_pressed"]
[connection signal="pressed" from="VBoxContainer/AscendLvls/Asc4" to="." method="_on_Asc4_pressed"]
[connection signal="pressed" from="VBoxContainer/AscendLvls/Asc5" to="." method="_on_Asc5_pressed"]
[connection signal="pressed" from="VBoxContainer/AscendLvls/Asc6" to="." method="_on_Asc6_pressed"]
[connection signal="pressed" from="VBoxContainer/AscendLvls/Asc7" to="." method="_on_Asc7_pressed"]
[connection signal="pressed" from="VBoxContainer/AscendLvls/Asc8" to="." method="_on_Asc8_pressed"]
[connection signal="pressed" from="VBoxContainer/BossLvls/Boss0" to="." method="_on_Boss0_pressed"]
[connection signal="pressed" from="VBoxContainer/BossLvls/Boss1" to="." method="_on_Boss1_pressed"]
